--- a/CR_DAY_ONE/MQTT.tex
+++ b/CR_DAY_ONE/MQTT.tex
@@ -44,14 +44,29 @@ tabsize=2
 \begin{document}
 
 \maketitle
-
-
-\url{https://github.com/SlaynPool/CR_MQTT/}
- 
- 
- 
+\begin{abstract}
  
 
+\url{https://github.com/SlaynPool/CR_MQTT/}\\
+Le but de ce document est de concentrer une journée de recherche à propos du protocole MQTT. Pour tous lecteurs, je ne garantie en rien l'exactitude des informations present dans ce docuement.
+ 
+ 
+\end{abstract}
+
+
+
+\section{Presentation MQTT}
+Comme vu en cours, MQTT est a la base dévelloppé pour permettre a des capteurs en plein millieu du dessert puissent remonter des données via des laisons sattellites. L'idée de MQTT etait donc d'avoir un protocole qui soit tolérant a la latence, économe en bande passante.\\
+MQTT (Message Queuing Telemetry Transport) est donc très intéresant pour l'IOT. De plus, La légerté du protocole permet  l'implémenter sur quasiment n'importe quoi (L'exemple donné par oasis est un controlleur avec 256KB de Ram)
+
+
+
+
+ \section{Sources}
+
+\begin{itemize}
+ \item \url{https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=mqtt}
+\end{itemize}
 
 
 
