--- a/CR_DAY_ONE/MQTT.tex
+++ b/CR_DAY_ONE/MQTT.tex
@@ -110,8 +110,7 @@ Nous n'en avons pas encore parler, cependant, il y a une notion de connection da
 \section{Echange de trames Elementaires}
 
 Pour cette partie, nous allons analyser quelques trames  communes du protocole MQTT.
-
-
+\subsection{Une demande de connection d'un client a un brocker}
 
 
 
