--- a/CR_DAY_ONE/MQTT.tex
+++ b/CR_DAY_ONE/MQTT.tex
@@ -109,8 +109,8 @@ Nous n'en avons pas encore parler, cependant, il y a une notion de connection da
 
 \section{Echange de trames Elementaires}
 
-Pour cette partie, nous allons analyser quelques trames  communes du protocole MQTT.
-Voici tous d'abord
+Pour cette partie, nous allons analyser quelques trames  communes du protocole MQTT. Le protocole MQTT est transporté grâce à TCP sur le port 1883.
+ Voici tous d'abord la structure de toutes les trames MQTT
 
 \begin{figure}[h!]
 \centering
@@ -118,6 +118,8 @@ Voici tous d'abord
 \caption{Un paquet MQTT}
 \label{fig:paquet}
 \end{figure}
+Comme on peut le voir seul 
+
 \subsection{Une demande de connection d'un client à un brocker}
 
 
