--- a/CR_DAY_ONE/MQTT.tex
+++ b/CR_DAY_ONE/MQTT.tex
@@ -129,7 +129,7 @@ Comme on peut le voir, seul les deux premiers parties d'un paquet sont obligatoi
 Le contenu du paquet sera donc |0001 0000| pour une tentative de connection.
 Si on suit correctement le shema, le serveur va donc lui repondre par une trame CONNACK (acceptation de connection) |0010 0000|
 
-\item 
+\item Le champs Taille du paquet permet d'annoncer la taille du 
 \end{itemize}
 
 
